responsive overflow correct

--- a/projects/project_astrozone/css/responsive.css
+++ b/projects/project_astrozone/css/responsive.css
@@ -208,9 +208,6 @@
 	.astro-gallery-section {
 		height: 50vh;
 	}
-	* {
-		outline: var(--ol);
-	}
 
 	.backsplash-container {
 		height: 100%;
